force-app/main/default/objects/Sale__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <formula>IF(ISPICKVAL(Order_Status__c, &apos;Cancelled&apos;), 0, Order_Total__c - Total_Collected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>