force-app/main/default/objects/Sale__c/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <description>Delivery charge on top of the products, without GST. Counted in Order Total, Balance Due and Payment Status.</description>
    <label>Delivery Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>