force-app/main/default/objects/Sale__c/fields/Delivery_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pincode__c</fullName>
    <description>6-digit PIN code of the delivery address, checked against India Post data by the website.</description>
    <label>Delivery PIN Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>