force-app/main/default/objects/Sale__c/fields/Delivery_Zone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zone__c</fullName>
    <description>Where the delivery PIN code falls under Delivery Setting: Local (any order size), Home State (brand minimums) or Other State (brand minimums plus a delivery charge). Blank on orders from before PIN codes were checked.</description>
    <label>Delivery Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Local</fullName><default>false</default><label>Local</label></value>
            <value><fullName>Home State</fullName><default>false</default><label>Home State</label></value>
            <value><fullName>Other State</fullName><default>false</default><label>Other State</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>