force-app/main/default/objects/Sale__c/fields/Effective_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Effective_Revenue__c</fullName>
    <formula>Total_Revenue__c - Total_CD_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>