force-app/main/default/objects/Sale__c/fields/Notes_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Notes_Remarks__c</fullName>
    <description>Any remarks about this sale.</description>
    <inlineHelpText>Any remarks about this sale.</inlineHelpText>
    <label>Notes/Remarks</label>
    <type>TextArea</type>
</CustomField>