force-app/main/default/objects/Sale__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <description>What the client pays: Total Revenue (products with GST) plus Delivery Charge.</description>
    <formula>Total_Revenue__c + Delivery_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Products with GST plus the delivery charge.</inlineHelpText>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>