force-app/main/default/objects/Sale__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>How the customer chose to pay. Online orders are expected to be paid by UPI before delivery; they are matched against bank credit alerts even while Pending Approval, and their WhatsApp updates use the "paid" templates once settled.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash on Delivery</fullName>
                <default>true</default>
                <label>Cash on Delivery</label>
            </value>
            <value>
                <fullName>Online</fullName>
                <label>Online (UPI)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>