force-app/main/default/objects/Sale__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(Total_Collected__c = 0, &quot;Unpaid&quot;, IF(Total_Collected__c &gt;= Order_Total__c, &quot;Fully Paid&quot;, &quot;Partially Paid&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>