force-app/main/default/objects/Sale__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>IF(Total_Revenue__c &gt; 0,
   Total_Profit__c / Total_Revenue__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>