force-app/main/default/objects/Sale__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>&apos;Qtr&apos; &amp;
TEXT(CEILING(MONTH(Sale_Date__c) / 3)) &amp;
&apos;_&apos; &amp;
TEXT(YEAR(Sale_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>