force-app/main/default/objects/Sale__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <description>Amount owed back to the client for a cancelled order; filled from Total Collected when the order is cancelled.</description>
    <label>Refund Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>