force-app/main/default/objects/Sale__c/fields/Refund_Reference__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reference__c</fullName>
    <description>UPI UTR or bank reference of the refund; included in the client's refund WhatsApp.</description>
    <inlineHelpText>UPI UTR / bank reference of the refund. Sent to the client in the WhatsApp confirmation.</inlineHelpText>
    <label>Refund Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>