force-app/main/default/objects/Sale__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <description>Set to Pending automatically when an order that holds payments is cancelled. Staff set it to Refunded after sending the money back; that sends the client the refund_processed WhatsApp.</description>
    <inlineHelpText>Pending = the client paid for a cancelled order and is owed a refund. Set to Refunded once the money is sent back (add the UPI reference) and the client gets a WhatsApp confirmation.</inlineHelpText>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>