force-app/main/default/objects/Sale__c/fields/Refunded_On__c.field-meta.xml
<CustomField>
    <fullName>Refunded_On__c</fullName>
    <description>Date the refund was sent; stamped automatically when Refund Status becomes Refunded, if left blank.</description>
    <label>Refunded On</label>
    <type>Date</type>
</CustomField>