force-app/main/default/objects/Sale__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <label>Regional Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rohan</fullName>
            </value>
            <value>
                <fullName>Vikram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>