force-app/main/default/objects/Sale__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>When you delivered/sold. Required ✓. Default = Today.</description>
    <label>Sale Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>