force-app/main/default/objects/Sale__c/fields/Total_CD_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_CD_Amount__c</fullName>
    <label>Total CD Amount</label>
    <summarizedField>Client_Payment__c.CD_Amount__c</summarizedField>
    <summaryForeignKey>Client_Payment__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>