force-app/main/default/objects/Sale__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <description>SUM of Client_Payment__c.Amount__c. Total cash received from client.</description>
    <inlineHelpText>Total cash received from client.</inlineHelpText>
    <label>Total Collected</label>
    <summarizedField>Client_Payment__c.Settlement_Amount__c</summarizedField>
    <summaryForeignKey>Client_Payment__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>