force-app/main/default/objects/Sale__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <description>SUM of Sale_Line_Item__c.Line_Profit__c. Total profit from this sale.</description>
    <inlineHelpText>Total profit from this sale.</inlineHelpText>
    <label>Total Profit</label>
    <summarizedField>Sale_Line_Item__c.Line_Profit__c</summarizedField>
    <summaryForeignKey>Sale_Line_Item__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>