force-app/main/default/objects/Sale__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>SUM of Sale_Line_Item__c.Line_Amount__c. Total money from this sale.</description>
    <inlineHelpText>SUM of Sale_Line_Item__c.Line_Amount__c. Total money from this sale.</inlineHelpText>
    <label>Total Revenue</label>
    <summarizedField>Sale_Line_Item__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Sale_Line_Item__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>