force-app/main/default/objects/Sale__c/fields/Web_Order_Ref__c.field-meta.xml
<CustomField>
    <fullName>Web_Order_Ref__c</fullName>
    <externalId>true</externalId>
    <label>Web Order Ref</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>